<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cis.gvsu.edu.traxy.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:text="@string/welcome_to" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/traxy_logo"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/logo_description"
        android:scaleType="fitCenter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_required" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/password"
        android:hint="@string/password_required"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:id="@+id/password2"
        android:hint="@string/password_verify"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password" />
</RelativeLayout>
